--- a/common/.gitignore
+++ b/common/.gitignore
@@ -1,3 +1,51 @@
 node_modules
 dist
 package-lock.json
+.env# Node.js dependencies
+node_modules
+
+# Build output directories
+dist
+dist-ssr
+
+# Environment files
+.env
+.dev.vars
+
+# Log files
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Lerna and workspace
+hooks
+
+# Package lock files
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+bun.lockb
+
+# TypeScript configuration
+tsconfig.json
+
+# Backend-specific
+backend/.wrangler
+
+# Frontend-specific
+frontend
