--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,4 +1,15 @@
-# Logs
+# Node.js dependencies
+node_modules
+
+# Build output directories
+dist
+dist-ssr
+
+# Environment files
+.env
+.dev.vars
+
+# Log files
 logs
 *.log
 npm-debug.log*
@@ -6,11 +17,6 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
 
 # Editor directories and files
 .vscode/*
@@ -22,4 +28,21 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Lerna and workspace
 hooks
+
+# Package lock files
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+bun.lockb
+
+# TypeScript configuration
+tsconfig.json
+
+# Backend-specific
+backend/.wrangler
+
+# Frontend-specific
+frontend
