--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "@100xdevs/medium-common": "^1.0.0",
     "@prisma/client": "^5.10.2",
     "@prisma/extension-accelerate": "^0.6.3",
+    "dotenv": "^16.4.5",
     "hono": "^4.0.8",
     "prisma": "^5.19.1"
   },
